<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/nextPagebtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="412dp"
        android:layout_height="663dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/EnterUsernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textStyle="bold"
            android:textSize="36sp"
            android:text="@string/enter_a_username" />

        <EditText
            android:id="@+id/enterUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:ems="10"
            android:hint="@string/example"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <TextView
            android:id="@+id/EnterBirthdayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textStyle="bold"
            android:textSize="36sp"
            android:text="@string/enter_date_of_birth" />

        <EditText
            android:id="@+id/editBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:ems="10"
            android:hint="@string/mm_dd_yyyy"
            android:inputType="date"
            android:autofillHints="" />

        <TextView
            android:id="@+id/ChooseGenderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textStyle="bold"
            android:textSize="36sp"
            android:text="@string/choose_gender" />

        <Spinner
            android:id="@+id/chooseGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />

        <TextView
            android:id="@+id/enterWeightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textStyle="bold"
            android:textSize="36sp"
            android:text="@string/enter_weight_in_lbs" />

        <EditText
            android:id="@+id/editWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:ems="10"
            android:hint="@string/_165_24"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <TextView
            android:id="@+id/enterHeightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textStyle="bold"
            android:textSize="36sp"
            android:text="@string/enter_height_in_cm" />

        <EditText
            android:id="@+id/editHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:ems="10"
            android:hint="@string/_172_72"
            android:inputType="numberDecimal"
            android:autofillHints="" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>