<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".presentation.HomeActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:textSize="25sp"
        android:id="@+id/textGreeting"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caloriesRemaining"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goal"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:id="@+id/textGoal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remaining"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:id="@+id/textRemaining"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/food"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/zero"
            android:textSize="20sp"
            android:id="@+id/textFoodCalories"/>
    </RelativeLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#1111"
        android:id="@+id/listViewFoods"/>
    <Button
        android:id="@+id/btnAddFood"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/addFood"
        android:onClick="btnAddFoodOnClick"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/exercise"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/zero"
            android:textSize="20sp"
            android:id="@+id/textExerciseCalories"/>
    </RelativeLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#1111"
        android:id="@+id/listViewExercises"/>
    <Button
        android:id="@+id/btnAddExercise"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/addExercise"
        android:onClick="btnAddExerciseOnClick"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btnProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:enabled="false"
            android:onClick="btnHistoryOnClick"
            android:text="@string/history"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:enabled="false"
            android:onClick="buttonProfileOnClick"
            android:text="@string/profile" />
    </RelativeLayout>

</LinearLayout>